# stadtlandflusshelfer

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
stadtlandflusshelfer/: __main__.py
tests/: test_foo.py
