[tool.poetry]
name = "stadtlandflusshelfer"
version = "0.0.1"
description = "Hilft einen zufälligen Buchstaben für Stadt-Land-Fluss zu finden"
authors = ["Michael Meer <michael.meer@gmail.com>"]
repository = "https://github.com/michaelmeer/stadtlandflusshelfer"
documentation = "https://michaelmeer.github.io/stadtlandflusshelfer/"
readme = "README.md"
packages = [
  {include = "stadtlandflusshelfer"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
textual = "^0.83.0"
pyfiglet = "^1.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
pre-commit = "^4.0.1"
tox = "^4.22.0"
textual-dev = "^1.6.1"
ruff = "^0.6.9"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["stadtlandflusshelfer"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true
